# MarioMaker2YuzuFrontend

./: .gitmodules  CMakeLists.txt  README.md
main/: CMakeLists.txt
main/src/: main.cpp
mm2yuzufrontend/: CMakeLists.txt
mm2yuzufrontend/include/: mm2yuzufrontend.hpp
mm2yuzufrontend/include/mm2yuzufrontend/: keys.h
mm2yuzufrontend/src/: savedat.cpp
test/: CMakeLists.txt
test/src/: parsing.cpp
